# gimlet

./: .env.example  .vscode-test.json  .vscodeignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
examples/anchor-example/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/anchor-example/programs/shipment-managment/: Cargo.toml
examples/anchor-example/programs/shipment-managment/src/: lib.rs
examples/anchor-example/programs/shipment-managment/tests/: create_shipment.rs  initialize_counter.rs
examples/anchor-example/tests/: litesvm.ts
examples/anchor-multi-program/: Anchor.toml  Cargo.toml  deployScript.ts  local-litesvm  notes.md  package.json  pnpm-lock.yaml  wallet.json
examples/anchor-multi-program/input/program-a/: add.json  calculatePower.json  countDown.json  initialize.json
examples/anchor-multi-program/input/program-b/: initialize.json  multiply.json
examples/anchor-multi-program/input/program-c/: initialize.json  subtract.json
examples/anchor-multi-program/migrations/: deploy.ts
examples/anchor-multi-program/programs/program-a/: Cargo.toml
examples/anchor-multi-program/programs/program-a/src/: lib.rs
examples/anchor-multi-program/programs/program-a/tests/: test_cpi.rs
examples/anchor-multi-program/programs/program-b/: Cargo.toml
examples/anchor-multi-program/programs/program-b/src/: lib.rs
examples/anchor-multi-program/tests/: test_cpi.ts
src/: LldbLibraryManager.js  PortManager.js  VsCodeSettingsManager.js  config.js  constants.js  debug.js  debuggerManager.js  extension.js  projectStructure.js  state.js
src/lens/: GimletCodeLensProvider.js  gimletCodeLensProvider.js
src/managers/: DebugConfigManager.js  PortManager.js  debugConfigManager.js  portManager.js
src/state/: globalState.js  sessionState.js
src/utils/: findExecutableFile.js  getAddressFromFunctionName.js  getFunctionNameAtLine.js  getTerminalByName.js  pollDebuggerConnection.js
