[workspace]
members = [
    "programs/*"]
resolver = "2"


[profile.release]
overflow-checks = true
codegen-units = 1
lto = "off"
opt-level = 0
debug = true

[profile.release.build-override]
opt-level = 0
debug = true
incremental = false
codegen-units = 1

[patch.crates-io]
solana-sbpf = { path = "/Users/emilemilovroydev/Rust/projects/Solana/gimlet-raw/sbpf" }


# These three Boris told me with combination of SBPF V1
# lto = "off"
# opt-level = 0
# debug = true