[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "off"
codegen-units = 1
debug = true
opt-level = 0

[profile.release.build-override]
incremental = false
codegen-units = 1
debug = true
opt-level = 0

[patch.crates-io]
solana-sbpf = { path = "/Users/emilemilovroydev/Rust/projects/Solana/gimlet-raw/sbpf" }


