[package]
name = "shipment-managment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shipment_managment"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
solana-sdk-ids = "2.2.1"
solana-account = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "2.0.0"
solana-transaction = "2.2.1"
solana-instruction = "2.2.1"
litesvm = { path = "/Users/emilemilovroydev/Rust/projects/Solana/gimlet-raw/litesvm/crates/litesvm"}
sha2 = "0.10.9"